--- a/New-Site/main.css
+++ b/New-Site/main.css
@@ -2,6 +2,7 @@ body, html{
     padding: 0;
     margin: 0;
     background-color: whitesmoke;
+    overflow-x: hidden;
 
 }
 
@@ -50,12 +51,13 @@ body, html{
 
 }
 footer{
-    position:absolute;
+    position:fixed;
     height:20px;
     width:100vw;
     bottom: 0;
     background-color: black;
     color:white;
+    margin:0;
 
 }
 footer p {
@@ -80,6 +82,7 @@ footer p {
     display:inline-block;
     margin-left: 2%;
     margin-right: 2%;
+
 }
 
 .pic {
@@ -90,6 +93,7 @@ footer p {
     margin-left: auto;
     margin-right: auto;
 
+
 }
 
 .pic i{
@@ -97,4 +101,20 @@ footer p {
     color: #E04A50;
     margin-top: 20%;
     margin-bottom:5% ;
+}
+
+.box .fa:hover {
+    color: green;
+    font-size:550%;
+}
+
+@media (max-width : 900px){
+    .box {
+        display:block;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: center;
+        width:50%;
+        margin-bottom: 30px;
+    }
 }
